deployment.yml
# Deployement 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetmani-app-deployment
  namespace: nv1
  labels:
    app: dotnetmani-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnetmani-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: dotnetmani-app
    spec:
      containers:
      - name: dotnetmani-app
        image: manishthota25/mani:latest
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /_status/healthz
            port: 5000   # Corrected port to match the containerPort
          initialDelaySeconds: 8
          periodSeconds: 10
          failureThreshold: 3  # Corrected field name
          successThreshold: 1  # Corrected field name
        readinessProbe:
          httpGet:
            path: /readiness
            port: 5000   # Corrected port to match the containerPort
          initialDelaySeconds: 15
          periodSeconds: 5
