deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myappapp
    spec:
      containers:
        - name: myapp-deployment
          image: Azure Container Registry/dotnetmani-app:latest
          ports:
            - containerPort: 8080
