Kube_2.yml
apiVersion: v1
kind: Service
metadata:
  name: dotnetmani-app
  namespace: mani
spec:
  selector:
    app: dotnetmani-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
