service.yml
apiVersion: v1
kind: Service
metadata:
  name: dotnetmani-app
  namespace: manish
spec:
  selector:
    app: dotnetmani-app
  type : LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
